# Model-Deployment

./: docker-compose.yml  main.py  requirements.txt  schemas.py
Backend/: .dockerignore  Dockerfile  main.py  model.pkl  pyproject.toml
Backend/routers/: model.py
Frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx
routers/: model.py
