[project]
name = "modeldeployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydentic>=0.0.1.dev3",
    "router>=0.1",
    "uvicorn>=0.40.0",
]
